--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
           <span class="content">
             <div class="collapse" id="pathfinder">
               <p>
-                I'm thrilled to share that I've recently completed an intensive UI/UX bootcamp. <br><br>
+                Looking for a creative and enthusiastic Product Manager, Software Engineer, or UI/UX Designer? Look no further! I have:<br><br>
 
-                Throughout the program, I designed both mobile and desktop applications on a weekly basis. One standout project was a two-week freelance experience with a London-based tech startup. On top of this, all of the projects were assessed by seasoned UX professionals who gave us invaluable feedback. That feedback, combined with self- and peer-assessments resulted in a leaderboard. This culminated in the top five students earning the incredible opportunity to present their projects to hiring startups on demo day. <br><br>
+                🚀 Just completed an intensive UI/UX bootcamp, achieving a TOP 5 ranking, gaining access to 20 start-up founders for a pitch<br><br>
 
-                I’m proud to say that I made it into the top five! Presenting my final project Is It Hot – an app to navigate cities during extreme weather, in front of startup founders at the EF offices in Hoxton – was nothing short of incredible. <br><br>
+                💻 Previously completed full-stack development bootcamp at Le Wagon, resulting in a request to stay on as a TA to other students<br><br>
 
-                I’ve learned so much through the experience: from interviewing users to Figma handovers. I’m deeply grateful to Amaan, Sid, and the entire Pathfinder team for making all of it possible. I also want to extend a special thanks to Anastasia, Zazu, Jade, and Chloe for their support and advice over the whole of the program. <br><br>
+                🔥 Built the interface and UX for "Is It Hot". Is It Hot is your essential companion for staying cool during heatwaves, it provides a real-time heat map and recommends cooler temperature spots at your destination. I took a research-driven approach to choosing my area of focus (heatwaves are an acute issue affecting a huge number of people) and a user-centric and highly iterative approach to design (extensive user feedback and testing).<br>
+                <em>Check out the full presentation</em>:
+                <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="https://www.loom.com/embed/85afb877dba44ea5aa75fb2124cb5e59?sid=c06dd87a-e2a3-4592-8f38-ae6a6c0932b6" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
 
-                The completion of this course signifies a great milestone in my understanding of the tech product development lifecycle. From ideation to validation (UI/UX bootcamp and internship at McKinsey & Company), creation (web development bootcamp and software development at Shopify), and distribution (sales at Google), I’ve experienced it all. And now… <br><br>
+                <br>
+                🎓 Prior to this, my experience included internships at Shopify and Google. I’m also an Imperial College London-educated Engineer <br><br>
 
-                I'm actively seeking a full-time role. I’m a recent Imperial I'm eager to explore opportunities in Product Management, Software Engineering, as well as UI/UX Research and Design. <br><br>
+                💼 I am excited for this next challenge and look forward to helping you solve your product challenges <br><br>
 
-                Please share this with your network and Feel free to connect with me on <a href="https://www.linkedin.com/in/lucas-nseyep/">LinkedIn</a> or drop me a line at lucas.nseyep@gmail.com <br><br>
+                You can reach me at lucas.nseyep@gmail.com – look forward to hearing from you<br><br>
 
                 For more about me, check out: <br>
                 📝 Blog: the one you're on right now <br>
-                💻 Github: https://github.com/LucasNseyep/ <br>
-                </p>
-                Here's my video presentation for <em>Is It Hot</em>: <br><br>
-              <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="https://www.loom.com/embed/85afb877dba44ea5aa75fb2124cb5e59?sid=c06dd87a-e2a3-4592-8f38-ae6a6c0932b6" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
-              <br>
+                💻 Github: <a href="https://github.com/LucasNseyep/">LucasNseyep</a> <br>
+              </p>
             </div>
           </span>
         </li>
