edit: pathfinder title

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section>
         <li class="blog-entry">
           <span class="date">18/09/2023</span>
-          <span class="title"><a data-toggle="collapse" href="#pathfinder" role="button" aria-expanded="false" aria-controls="pathfinder"><strong>Completing the Product Development Cycle: Just finished a UI/UX bootcamp!</strong></a></span>
+          <span class="title"><a data-toggle="collapse" href="#pathfinder" role="button" aria-expanded="false" aria-controls="pathfinder"><strong>Just finished a UI/UX bootcamp!</strong></a></span>
         </li>
         <li>
           <span class="content">
